--- a/express-mongodb-rabbitmq/package.json
+++ b/express-mongodb-rabbitmq/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mongoose": "^4.1.11"
   }
 }
