--- a/express-mongodb-rabbitmq/package.json
+++ b/express-mongodb-rabbitmq/package.json
@@ -8,5 +8,13 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.11"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3",
+    "request": "^2.65.0"
+  },
+  "scripts": {
+    "test": "mocha test"
   }
 }
