--- a/express-mongodb-rabbitmq/package.json
+++ b/express-mongodb-rabbitmq/package.json
@@ -7,7 +7,8 @@
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
-    "mongoose": "^4.1.11"
+    "mongoose": "^4.1.11",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^3.3.0",
