--- a/express-mongodb-rabbitmq/package.json
+++ b/express-mongodb-rabbitmq/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "mocha": "^2.3.3",
+    "mongodb": "^2.0.46",
     "request": "^2.65.0"
   },
   "scripts": {
